--- a/register.html
+++ b/register.html
@@ -13,7 +13,7 @@
 				<div class="panel-body">
 					<form role="form">
 						<div class="form-group">
-							<label for="name">Name</label>
+							<label for="name">Full Name</label>
 							<input type="text" class="form-control" id="name" placeholder="Full Name">
 						</div>
 						<div class="form-group">
