Jinja2 Template Engine

--- a/class.html
+++ b/class.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Course Page</title>
+		<title>{{ title }} | Code Mafia</title>
 		<meta charset="utf-8"> 
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="./css/bootstrap.min.css">
@@ -69,7 +69,7 @@
 					<div role="tabpanel" class="tab-pane fade in active" id="introduction">
 						<h2>Introduction</h2>
 						<hr/>
-						<h4>Description</h4>
+						<p>{{ description }}</p>
 						<h4>Importent Notice</h4>	
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="syllabus">
