--- a/class.html
+++ b/class.html
@@ -85,7 +85,10 @@
 					<div role="tabpanel" class="tab-pane fade" id="assignment">
 						<h2>Assignment</h2>
 						<hr/>
-						<div class="panel panel-danger">
+						<p id="assignmentlist">
+						
+						</p>
+						<!--<div class="panel panel-danger">
 							<div class="panel-heading">Assignment #</div>
 							<div class="panel-body">
 								<h4>Problem</h4>
@@ -95,7 +98,7 @@
 								<h4>Result</h4> 
 								<hr/>
 							</div>
-						</div>
+						</div>-->
 					</div>
 					<div role="tabpanel" class="tab-pane fade" id="test">
 						<h2>Test</h2>
@@ -249,7 +252,7 @@
 			var output = "";
 			$.ajax({
 					type: 'POST',
-					url: "class_ajax.py",
+					url: "ajax/class_ajax.py",
 					data: ({classid:"1", field:"timeline"}), //passing classid
 					dataType: "text",
 					success: function(response){
@@ -262,12 +265,25 @@
 				});
 				$.ajax({
 					type: 'POST',
-					url: "class_ajax.py",
+					url: "ajax/class_ajax.py",
 					data: ({classid:"1", field:"useful_links"}), // passing classid
 					dataType: "text",
 					success: function(response){
 						output = response;
 						$("#useful_links").html(output);
+						}
+					}).done(function(data){
+						console.log(data);
+						
+				});
+				$.ajax({
+					type: 'POST',
+					url: "ajax/assignmentlist.py",
+					data: ({classid:"1"}), // passing classid
+					dataType: "text",
+					success: function(response){
+						output = response;
+						$("#assignmentlist").html(output);
 						}
 					}).done(function(data){
 						console.log(data);
